--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "babel-jest": "^29.6.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3"
   }
 }
